resources/css/frontend.css
.wsus__sign_in {
	margin-top: 100px;
}

/* SELECT OPTIONS WEREN'T IN LINE WITH THE REST OF THE FIELDS  */
.wsus__dashboard_profile_update_info select.form-control {
	padding-block: 0.75rem;
	margin-top: 0.3rem;
}

.wsus__dashboard_content_border_top {
	border-top: 1px solid #e5e5e5;
	margin-top: 20px;
}

.item_list li {
	color: var(--colorBlack);
	font-size: 18px;
	font-weight: 500;
	border-radius: 8px;
	border: 1px solid var(--borderColor);
	padding: 13px 50px 13px 55px;
	position: relative;
	-webkit-border-radius: 8px;
	-moz-border-radius: 8px;
	-ms-border-radius: 8px;
	-o-border-radius: 8px;
}

.item_list li span {
	font-size: 1rem;
	font-weight: bold;
	color: #111111;
}

.item_list li::before {
	position: absolute;
	content: "\f03d";
	font-family: "font awesome 5 free";
	font-size: 16px;
	font-weight: 600;
	width: 35px;
	height: 35px;
	line-height: 35px;
	text-align: center;
	background: var(--colorPrimary);
	color: var(--colorWhite);
	top: 7px;
	left: 12px;
	border-radius: 50%;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	-ms-border-radius: 50%;
	-o-border-radius: 50%;
}

.chapter_sorter {
	margin-top: 0.75rem;
}

